<resources>
    <string name="app_name">Tài Chính Nhanh</string>
    <string name="FACEBOOK_APP_ID">259733078405886</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verify_phone_number">Xác Minh Số Điện Thoại</string>
    <string name="enter_phone">Nhập Số Điện Thoại</string>
    <string name="verify_code">Mã OTP đang được gửi tới bạn</string>
    <string name="enter_otp">Nhập mã OTP của bạn </string>
    <string name="next">Tiếp tục</string>
    <string name="number_incorrect">Số điện thoại không hợp lệ</string>
    <string name="alert_dialog">Thông báo</string>
    <string name="support_information">Thông tin cá nhân</string>
    <string name="support_repay">Thông tin vay trả</string>
    <string name="support_customer">Hỗ trợ khách hàng</string>
    <string name="verify_account">Xác minh tài khoản</string>
    <string name="accpect_loan">Xác nhận tín dụng</string>
    <string name="request_loan">Xác nhận vay</string>
    <string name="max_money_can_loan">Hạn mức tối đa có thể vay</string>
    <string name="value_show_main">10,000,000 VNĐ</string>
    <string name="sdt_congratulation">SĐT: </string>
    <string name="sdt_xxxxx">xxxxx</string>
    <string name="sdt_register_success"> đã đăng ký thành công</string>
    <string name="number_income">Số tiền vay:</string>
    <string name="choose_the_day">Thời hạn vay(ngày):</string>
    <string name="tutorial_new_user">Hướng dẫn</string>
    <string name="tutorial_step_1">Số tín dụng bạn có thể vay</string>
    <string name="tutorial_step_2">Số ngày gia hạn tín dụng</string>
    <string name="tutorial_step_3">Các nút hỗ trợ gồm thông tin cá nhân, thông tin trả vay và hỗ trợ khách hàng</string>
    <string name="tutorial_step_4">Vuốt xuống để tải lại trang</string>
    <string name="unknow_error">Lỗi không xác định được. Vui lòng liên hệ CSKH</string>
    <string name="request_location">Để quá trình xác minh tài khoản được nhanh chóng. Bạn vui lòng cho phép ứng dụng hiện xin cấp quyền định vị</string>
    <string name="device_not_support">Thiết bị không hỗ trợ Google Play Service</string>
    <string name="cancel">Hủy</string>
    <string name="ok">OK</string>
    <string name="yes">Đồng ý</string>
    <string name="accept">Xác nhận</string>
    <string name="verify_steps">Vui lòng xác minh các bước sau:</string>
    <string name="bank_information">Tài khoản ngân hàng</string>
    <string name="verify_id_card">Xác minh danh tính</string>
    <string name="verify_person">SĐT người thân</string>
    <string name="number_bank_account">Số tài khoản</string>
    <string name="reinput_number_bank_account">Nhập lại số tài khoản</string>
    <string name="name_bank_account">Tên chủ tài khoản</string>
    <string name="name_bank">Tên ngân hàng</string>
    <string name="bank_department">Chi nhánh ngân hàng</string>
    <string name="error_get_bank_list">Data ngân hàng có lỗi. Hiện không thể lấy được dữ liệu</string>
    <string name="error_empty_value">Không được để trống</string>
    <string name="error_not_same">Số tài khoản không giống nhau</string>
    <string name="verify_bank_success">Xác thực tài khoản ngân hàng thành công</string>
    <string name="step2_number_cmnd_cccd">Số CMND/CCCD của bạn</string>
    <string name="step2_andress">Địa chỉ của bạn</string>
    <string name="step2_bday">Ngày sinh của bạn</string>
    <string name="step3_take_front_cmnd">Chụp mặt trước CMND/CCCD</string>
    <string name="step3_take_back_cmnd">Chụp mặt sau CMND/CCCD</string>
    <string name="step3_take_hand_cmnd">Chụp tay cầm CMND/CCCD</string>
    <string name="need_permission_capture">Xin cấp quyền chụp ảnh</string>
    <string name="verify_number_id">Số CMND/CCCD không đúng</string>
    <string name="step2_bday_error">Ngày sinh không được để trống</string>
    <string name="step3_upload_image_front_fail">Tải ảnh chụp mặt trước bị lỗi</string>
    <string name="step3_upload_image_back_fail">Tải ảnh chụp mặt sau bị lỗi</string>
    <string name="step3_upload_image_hand_fail">Tải ảnh chụp tay cầm bị lỗi</string>
    <string name="step4_name_person1">Chọn người thân</string>
    <string name="step4_number_contact_person1">Số điện thoại</string>
    <string name="step4_name_contact_person1">Tên người thân</string>
    <string name="step4_relationship">Mối quan hệ</string>
    <string name="step4_need_permission_contact">Cho phép ứng dụng mở xin quyền danh bạ</string>
    <string name="step4_message_request_contact">Để quá trình xác minh tài khoản được nhanh hơn. Vui lòng cho phép ứng dụng hiện xin quyền danh bạ</string>
    <string name="step4_need_relation">Mối quan hệ không được để trống</string>
    <string name="step4_need_select_relatives">Vui lòng chọn người thân</string>
    <string name="loan_money">Số tiền vay:</string>
    <string name="loan_interest">Lãi:</string>
    <string name="loan_fee">Phí quản lý:</string>
    <string name="loan_actual_received">Thực nhận:</string>
    <string name="loan_time">Thời hạn vay:</string>
    <string name="day">ngày</string>
    <string name="loan_waitting">Đang thẩm định hồ sơ</string>
    <string name="record_video">Quay Video</string>
    <string name="record_video_info">Để tiếp tục quá trình thẩm định, bạn cần thao tác quay video xác minh đã vay khoản tiền của Công ty</string>
    <string name="wait_detail1">Tín dụng đang giải ngân đến tài khoản ngân hàng của bạn. Vui lòng vuốt xuống để cập nhập lại trạng thái!</string>
    <string name="bill_time_cash_back">Ngày đến hạn:</string>
    <string name="bill_day_delay">Ngày trễ hạn:</string>
    <string name="bill_fee">Phí phạt:</string>
    <string name="bill_total_pay">Tiền thanh toán:</string>
    <string name="bill_tutorial">Nếu bạn không biết trả vay như thế nào. Vui lòng ấn vào nút hỗ trợ -> Thông tin trả vay. Hoặc vào phần CSKH để được hỗ trợ tốt nhất.</string>
    <string name="bill_delete_loan">Đang xóa khoản vay</string>
    <string name="bill_upload_image">Đăng ảnh ủy nhiệm chi</string>
    <string name="reject_repay">Quá trình thẩm định ảnh ủy nhiệm chi không thành công. Vui lòng chụp lại ảnh khác. Xin cảm ơn!</string>
    <string name="reject_video">Quá trình thẩm định Video không thành công. Vui lòng thao tác lại. Xin cảm ơn!</string>
    <string name="cmnd_cccd">CMND/CCCD</string>
    <string name="support_no_information">Chưa có thông tin</string>
    <string name="support_title_customer">Thông tin chăm sóc khách hàng</string>
    <string name="support_hot_line">Hỗ trợ qua điện thoại</string>
    <string name="support_fb">Hỗ trợ facebook</string>
    <string name="support_zalo">Hỗ trợ Zalo</string>
    <string name="message">message</string>
    <string name="zalo_copied">Số Zalo đã đc sao chép. Vui lòng dán vào Zalo để liên hệ với kênh chăm sóc khách hàng.</string>
    <string name="support_additional_later">Thông tin hỗ trợ khách hàng đang được bổ sung. Xin vui lòng chờ trong giây lát!</string>
    <string name="back_press_again">Nhấn back lần nữa để thoát</string>
</resources>
