<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_splash"
    android:fitsSystemWindows="true"
    android:windowSoftInputMode="adjustResize"
    tools:context=".fragment.phoneAuthen.PhoneAuthenMainFragment">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        android:text="@string/verify_phone_number"/>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/layout_edt_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:hint="@string/enter_phone"
        android:layout_marginTop="100dp"
        android:textColorHint="@color/white"
        android:layout_marginBottom="150dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:textColor="@color/color_splash"
        android:layout_margin="20dp"
        android:text="@string/next"
        />


</RelativeLayout>