<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.supportView.CskhSupportFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">
        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <RelativeLayout
                android:id="@+id/layout_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/lottie_support"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:src="@drawable/support_customer"
                    android:layout_marginLeft="10dp">

                </ImageView>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/lottie_support"
                    android:text="@string/support_customer"
                    android:textColor="@color/color_4"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:textSize="20dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_mid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="200dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/layout_top">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/support_title_customer"
                    android:textColor="@color/color_4"
                    android:gravity="center"
                    android:textSize="18dp"/>


                <TextView
                    android:id="@+id/tv_info_support"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_4"
                    android:layout_below="@id/tv_title"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="18dp"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_mid"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp">

                <Button
                    android:id="@+id/btn_hotline"
                    android:layout_width="150dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="@string/support_hot_line"
                    android:textColor="@color/color_4"
                    android:layout_marginRight="10dp"/>

                <Button
                    android:id="@+id/btn_fb"
                    android:layout_width="150dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:textColor="@color/color_4"
                    android:text="@string/support_fb"
                    android:layout_marginRight="10dp"/>

                <Button
                    android:id="@+id/btn_zalo"
                    android:layout_width="150dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:textColor="@color/color_4"
                    android:text="@string/support_zalo"
                    android:layout_marginTop="8dp"/>

            </LinearLayout>







        </RelativeLayout>


    </ScrollView>


</RelativeLayout>