<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.supportView.InformationSupportFragment">



    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">

        <ImageView
            android:id="@+id/img_card"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/id_card">

        </ImageView>
        <TextView
            android:id="@+id/tv_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/support_information"
            android:textColor="@color/color_4"
            android:layout_toRightOf="@+id/img_card"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textSize="25dp"/>






    </RelativeLayout>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="200dp"
        android:layout_margin="10dp"

        card_view:cardBackgroundColor="#fff"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="4dp"
        android:layout_below="@id/layout_top"
        card_view:cardUseCompatPadding="true" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/tv_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cmnd_cccd"
                android:textColor="@color/color_1"
                android:layout_marginLeft="10dp"
                android:textSize="18dp"/>

            <TextView
                android:id="@+id/tv_cmnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_4"
                android:layout_below="@id/tv_left"
                android:text="@string/support_no_information"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textSize="18dp"/>

            <TextView
                android:id="@+id/tv_left_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_bank_account"
                android:textColor="@color/color_1"
                android:layout_below="@id/tv_cmnd"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="18dp"/>

            <TextView
                android:id="@+id/tv_name_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_4"
                android:layout_below="@id/tv_left_2"
                android:text="@string/support_no_information"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textSize="18dp"/>

            <TextView
                android:id="@+id/tv_left_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_bank_account"
                android:textColor="@color/color_1"
                android:layout_below="@id/tv_name_card"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="18dp"/>

            <TextView
                android:id="@+id/tv_number_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_4"
                android:layout_below="@id/tv_left_3"
                android:text="@string/support_no_information"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textSize="18dp"/>

            <TextView
                android:id="@+id/tv_left_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_bank"
                android:textColor="@color/color_1"
                android:layout_below="@id/tv_number_card"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="18dp"/>

            <TextView
                android:id="@+id/tv_bank_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_4"
                android:layout_below="@id/tv_left_4"
                android:text="@string/support_no_information"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textSize="18dp"/>



        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>