<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="200dp"
        android:layout_margin="10dp"

        card_view:cardBackgroundColor="#fff"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="7dp"
        card_view:cardUseCompatPadding="true" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:paddingBottom="20dp">


            <TextView
                android:id="@+id/tv_left_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_bank_account"
                android:textColor="@color/color_splash"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="18dp"/>

            <TextView
                android:id="@+id/tv_name_card_sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_4"
                android:layout_below="@id/tv_left_2"
                android:text="@string/support_no_information"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="18dp"/>

            <TextView
                android:id="@+id/tv_left_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_bank_account"
                android:textColor="@color/color_splash"
                android:layout_below="@id/tv_name_card_sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="18dp"/>

            <TextView
                android:id="@+id/tv_number_card_sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_4"
                android:layout_below="@id/tv_left_3"
                android:text="@string/support_no_information"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:textSize="18dp"/>

            <TextView
                android:id="@+id/tv_left_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_bank"
                android:textColor="@color/color_splash"
                android:layout_below="@id/tv_number_card_sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="18dp"/>

            <TextView
                android:id="@+id/tv_bank_card_sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_4"
                android:layout_below="@id/tv_left_4"
                android:text="@string/support_no_information"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="18dp"/>



        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>