<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.stateFragment.RepayInfoFragment">
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_repay"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                app:lottie_fileName="repay.json">
            </com.airbnb.lottie.LottieAnimationView>

            <LinearLayout
                android:id="@+id/layout_money_loan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lottie_repay"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_money_loan"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingRight="10dp"
                    android:text="@string/bill_time_cash_back"
                    android:textColor="@color/color_4"
                    android:textSize="20dp">

                </TextView>

                <TextView
                    android:id="@+id/tv_repay_date"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:textColor="@color/color_4"
                    android:textSize="20dp">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_interest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_money_loan"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_interest"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingRight="10dp"
                    android:text="@string/bill_day_delay"
                    android:textColor="@color/color_4"
                    android:textSize="20dp">

                </TextView>

                <TextView
                    android:id="@+id/tv_repay_date_delay"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:textColor="@color/color_4"
                    android:textSize="20dp">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_fee_managerment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_interest"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_fee"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingRight="10dp"
                    android:text="@string/bill_fee"
                    android:textColor="@color/color_4"
                    android:textSize="20dp">

                </TextView>

                <TextView
                    android:id="@+id/tv_repay_fee"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:textColor="@color/color_4"
                    android:textSize="20dp">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_actual_received"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_fee_managerment"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_money_pay"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingRight="10dp"
                    android:text="@string/bill_total_pay"
                    android:textColor="@color/color_4"
                    android:textSize="20dp">

                </TextView>

                <TextView
                    android:id="@+id/tv_repay_total_money"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:paddingLeft="5dp"
                    android:textColor="@color/color_4"
                    android:textSize="20dp">

                </TextView>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_tutorial_loan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/bill_tutorial"
                android:textColor="@color/color_4"
                android:layout_below="@id/layout_actual_received"
                android:drawablePadding="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="15dp"
                android:visibility="visible" />


            <TextView
                android:id="@+id/tv_delete_loan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/bill_delete_loan"
                android:textColor="@color/color_4"
                android:layout_below="@id/layout_actual_received"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                android:visibility="gone" />


        </RelativeLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_upload_repay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/scrollView"
        android:layout_marginRight="50dp"
        android:textColor="@color/color_4"
        android:background="@drawable/button_selector"
        android:visibility="visible"
        android:text="@string/bill_upload_image" />




</RelativeLayout>